--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,12 @@ div.post p.info{
     display: flex;
     gap: 10px;
 }
+
+div.post p.info a.author{
+    color : #333
+}
+
+div.post p.summary{
+    margin: 10px 0;
+    line-height: 1.4rem;
+}
