--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body{
 
 main{
     padding: 20px;
-    max-width: 700px;
+    max-width: 800px;
     margin:10px auto; 
 }
 
@@ -39,13 +39,23 @@ header nav{
 
 div.post{
     display: grid;
-    grid-template-columns: 0.9fr 1.1fr;
+    grid-template-columns: 1fr;
+    /* grid-template-columns: 0.9fr 1.1fr; */
     gap: 20px;
-    margin-bottom: 30px;
-    
+    margin-bottom: 30px; 
+}
+@media screen and (min-width : 600px) {
+    div.post{
+        grid-template-columns: 0.9fr 1.1fr;
+    }
 }
 div.post div.text h2{
     margin: 0;
+}
+
+div.post div.text a{
+    text-decoration: none;
+    color: inherit;
 }
 
 div.post p.info{
@@ -91,5 +101,33 @@ button{
 }
 form.login h2, form.register h2{
     text-align: center;
-    
+}
+div.post-page div.image{
+    max-height: 200px;
+    display: flex;
+    overflow: hidden;
+}
+div.post-page div.image img{
+    object-fit: cover;
+    object-position: center center;
+}
+div.post-page a{
+    color:#333;
+    text-decoration: underline;
+}
+div.post-page h1{
+    text-align:center;
+    margin: 10px 0 5px;
+}
+div.post-page time{
+    text-align: center;
+    display: block;
+    font-size: .7rem;
+    color:#aaa;
+}
+div.post-page div.author{
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: .7rem;
+    font-weight: bold;
 }
