Created the Edit Post page

--- a/src/App.css
+++ b/src/App.css
@@ -131,3 +131,21 @@ div.post-page div.author{
     font-size: .7rem;
     font-weight: bold;
 }
+div.edit-row{
+    text-align: center;
+    margin-bottom: 10px;
+}
+div.post-page a.edit-btn{
+    background-color: #333;
+    display: inline-flex;
+    align-items: center;
+    gap: 5px;
+    color: #fff;
+    padding: 7px 15px;
+    border-radius: 5px;
+    text-decoration: none;
+
+}
+a svg{
+    height: 20px;
+}
